# fastapi-udemy-for-studants-project1

./: .gitignore  README.md  converter.py  main.py  pyproject.toml  routers.py  schemas.py
