[tool.poetry]
name = "introducao"
version = "0.1.0"
description = ""
authors = ["diogoduartec"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
